Fix/icon font and alignments (#5605)
* Center icon font glyphs to harmonize with normal text.

* Fix Nato positioning for Win Chrome

* Not 100% happy but best X-browser fit approach positioning toolbar button icons and text

* Position of project menu toggle icon.

* Remove files I added accidentally

[ci skip]

--- a/app/assets/stylesheets/layout/_main_menu.sass
+++ b/app/assets/stylesheets/layout/_main_menu.sass
@@ -212,6 +212,10 @@ $toggler-width: 40px
       height: $main-menu-item-height
       text-align: right
       padding: 0 6px 0 0
+
+      // Center toggle icon vertically. The element is higher than it looks like.
+      line-height: 38px
+      font-size: 11px
       &:hover
         @include varprop(color, main-menu-navigation-toggler-font-hover-color)
   .toggle-follow
